[package]
name = "pulumi_wasm_example"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "random"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
pulumi_random.workspace = true
pulumi_wasm_rust.workspace = true

[build-dependencies]

[workspace.dependencies]
pulumi_random = { path = "random" }

pulumi_wasm_rust = {version = "=25.1.13-aed91f7", registry = "cloudsmith"}
wit-bindgen = "0.37.0"
anyhow = "1.0.95"
bon = "3.3.1"
serde = { version = "1.0.216", features = ["derive"] }
pulumi_wasm_build = { version = "=25.1.13-aed91f7", registry = "cloudsmith" }
