[workspace]
resolver = "2"
members = [
    "native",
    "random",
    "wasm"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
pulumi_random = { path = "random" }

pulumi_gestalt_rust = {version = "=25.2.14-9374348", registry = "pulumi-gestalt"}
anyhow = "1.0.95"
pulumi_gestalt_build = { version = "=25.2.14-9374348", registry = "pulumi-gestalt" }
